responsive on mobile fix for index

--- a/style.css
+++ b/style.css
@@ -675,7 +675,7 @@ h5{
     margin: 5px 10px;
   }
 
-  #cart_logo{
+#cart_logo{
     height: 15px;
     margin: 0 0 5px 12px;
 }
@@ -683,8 +683,7 @@ h5{
 #number_of_item_in_cart{
     margin: 0 0 15px 0;
     font-weight: bolder;
-    background-color: white;
-    color: white;
+    color: transparent;
     border-radius: 50%;
     padding: 1px 5px;
     font-size: 0.7em;
@@ -696,6 +695,20 @@ body > footer {
     align-items: center;
     margin: auto;
   }
+
+input#searchBar {
+    order : 1;
+    margin: 0.5em 0;
+}
+
+#nav_logo #cart_logo {
+    margin-bottom: 5px;
+}
+
+#cart ul li img {
+    padding: 0.5em;
+}
+
 }
 
 /* responsive for tablets and smartphones  _______________________________________________________*/
@@ -724,8 +737,8 @@ body > footer {
             transform: translateX(-800px);
         }
     }
+
     nav {
-        height: 12vh;
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
@@ -733,16 +746,6 @@ body > footer {
         top: 0;
         z-index: 20;
         background-color: white;
-    }
-
-    #nav_logo{
-        display:flex;
-        flex-direction: row-reverse;
-        flex-flow: wrap;
-        justify-content: center;
-        align-items: center;
-        margin-right: 10px;
-        margin-top: 10px;
     }
 
     #brandname{
@@ -779,30 +782,13 @@ body > footer {
         opacity: 70%;
         width: 92.5%;
     }
-    main {
-            width: 100%;
-            margin: 1em auto;
-            display: flex;
-            flex-direction: column-reverse;
-            justify-content: center;
-            align-items: center;
-     }  
-
-    div#products {
-    width: 100%;
-    margin-bottom: 20%;
-    } 
-
-    div#products div.watches {
-        width: 32%;
-    }
 
     div#cart {
         margin: 0;
         margin-bottom: 10%;
       }
 
-      /********MEDIA TYPE********/
+      /********MEDIA PAGE TYPE********/
       div.mainDiv {
         flex-flow: column;
         height: fit-content;
@@ -853,18 +839,27 @@ body > footer {
         height: 600px;
     }
     
-    /********CARROUSEL********/
+    /********MEDIA CARROUSEL********/
     main {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
         max-width: 100vw;
         width: 100%;
         margin: 0;
+    }
+
+    main div h2 {
+        max-width: 90vw;;
+        margin: 1em auto;
     }
 
     div#products {
         flex-flow: row;
         width: 100%;
         max-width: 100vw;
-        margin: 2em 0;
+        margin: 1em 0;
         overflow: scroll;
         justify-content: flex-start;
     }
@@ -873,4 +868,44 @@ body > footer {
         width: fit-content;
         min-width: 250px;
     }
+    
+    /********MEDIA ICONE********/
+
+    #nav_logo {
+        position: relative;
+        margin: 0;
+        margin-right: 1em;
+        display:flex;
+        flex-flow: row wrap;
+        justify-content: flex-end;
+        align-items: center;
+        width: 100px;
     }
+
+    #nav_logo * {
+        padding: 0;
+        margin: 0 3px;
+    }
+
+    #nav_logo #cart_logo {
+        margin-bottom: 5px;
+    }
+
+    #nav_logo span {
+        position: absolute;
+        padding: 5px 5px;
+        top: -10px;
+        right: -10px;
+        width: 5px;
+    }
+
+    input#searchBar {
+        order : 5;
+        margin: 0.5em 0;
+    }
+
+    input#searchBar.active {
+        width: 100px;
+    }
+   
+}
